<resources>
    <string name="app_name">AndroidApp</string>
    <string name="action_settings">Settings</string>
    <string name="choose_date">Set Date</string>
    <string name="choose_time">Set Time</string>
    <string name="ready">Done</string>
    <string name="time_default">00:00</string>
    <string name="date_default">00/00/0000</string>
    <string name="set_date_bnt">Set Date</string>
    <string name="set_time_bnt">Set Time</string>
    <string name="second_activity_bnt_show">Second Act</string>
    <string name="context_menu_edit">Edit</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>
